--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "import", "prettier"],
+  "plugins": ["react", "import", "prettier", "import-helpers"],
   "rules": {
     "react/jsx-uses-react": ["error"],
     "react/react-in-jsx-scope": ["off"],
@@ -41,6 +41,24 @@
     "no-unused-vars": ["warn"],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
-    "import/no-unresolved": ["off"]
+    "import/no-unresolved": ["off"],
+    "import-helpers/order-imports": [
+      "error",
+      {
+        "newlinesBetween": "always",
+        "groups": [
+          ["/react$/", "module"],
+          "/@material/",
+          ["/^react-i18next/", "/^react-griaule/"],
+          ["/^constants/", "/^helpers/", "/^hooks/", "/^redux/", "/^services/"],
+          "/^views/",
+          "/^components/",
+          ["index", "parent", "sibling"],
+          "/^assets/",
+          ["/styles$/", "/scss$/"]
+        ],
+        "alphabetize": { "order": "asc", "ignoreCase": false }
+      }
+    ]
   }
 }
