--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.1",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "i18next": "^22.4.5",
     "moment": "^2.29.4",
