--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#085d2d",
-  "background_color": "#e7dbc9"
+  "theme_color": "#e7dbc9",
+  "background_color": "#e7dbc9",
+  "color": "#13100c"
 }
