--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "4.14.1",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
     "react-router-dom": "^6.4.5",
