--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "match-financeiro-client",
+  "name": "match-financeiro",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
