--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "i18next": "^22.4.5",
     "moment": "^2.29.4",
-    "node-sass": "4.14.1",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-dates": "^21.8.0",
@@ -21,10 +20,12 @@
     "react-i18next": "^12.1.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "sass": "1.62.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-client": "react-scripts start",
+    "start": "yarn run build && (cd server && yarn start)",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
