refactor: removing server from branch

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start-client": "react-scripts start",
-    "start": "yarn run build && (cd server && yarn start)",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
